baserock_openid_provider: Tweak templates
Fixes capitalisation, a missing quote, and trying to show data that
isn't available because the user isn't logged in.

Change-Id: I99028d7e54c43c52838fea2d1d6380191ceb001d

--- a/baserock_openid_provider/templates/registration/registration_complete.html
+++ b/baserock_openid_provider/templates/registration/registration_complete.html
@@ -6,6 +6,6 @@
 a link that you will need to click to activate your account.</p>
 
 <p>The mail should arrive within 15 minutes, depending on your mail provider's
-use of <a href="https://en.wikipedia.org/wiki/Greylisting>greylisting.</a></p>
+use of <a href="https://en.wikipedia.org/wiki/Greylisting">greylisting.</a></p>
 </p>
 {% endblock %}
