--- a/baserock_openid_provider/templates/base.html
+++ b/baserock_openid_provider/templates/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="{{ STATIC_URL }}style.css" />
-    <title>{% block title %}Baserock OpenID provider{% endblock %}</title>
+    <title>{% block title %}Baserock OpenID Provider{% endblock %}</title>
 </head>
 
 <body>
