--- a/baserock_openid_provider/templates/registration/activation_complete.html
+++ b/baserock_openid_provider/templates/registration/activation_complete.html
@@ -2,9 +2,5 @@
 {% load i18n %}
 
 {% block content %}
-<p>{% trans "Your account is now activated." %}</p>
-
-<p>Your OpenID is:
-<a href="http://openid.baserock.org/openid/{{ user.username }}/">http://openid.baserock.org/openid/{{ user.username }}/</a>
-</p>
+<p>{% trans "Your account is now activated. Please log in." %}</p>
 {% endblock %}
